JR: se ajusta codigo
